[metadata]
# the package will be referenced with this name
name = my_helper

# read the version number from the file
version = attr: my_helper.__version__

author = Daniel Tuzes
author_email = tuzesdaniel@gmail.com
keywords = python, packaging, pip

# tells the package repository the versions you support
# python doesn't care about this info
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    
[options]
# the code needs this/these external libraries
# version number is optionial
install_requires=
    pandas

packages = find:


# ofc you already have python, but this request must be satisfied
python_requires=>=3.6